@@ -1,0 +1,53 @@
+<?php
+// $Id: views_handler_field_url.test,v 1.1.2.1 2010-05-26 14:43:02 dereine Exp $
+
+class ViewsHandlerFieldUrlTest extends ViewsSqlTest {
+  public static function getInfo() {
+    return array(
+      'name' => 'Field: Url',
+      'description' => 'Test the core views_handler_field_url handler.',
+      'group' => 'Views Handlers',
+    );
+  }
+
+  function viewsData() {
+    $data = parent::viewsData();
+    $data['views_test']['name']['field']['handler'] = 'views_handler_field_url';
+    return $data;
+  }
+
+  public function testFieldUrl() {
+    $view = $this->getBasicView();
+
+    $view->display['default']->handler->override_option('fields', array(
+      'name' => array(
+        'id' => 'name',
+        'table' => 'views_test',
+        'field' => 'name',
+        'relationship' => 'none',
+        'display_as_link' => FALSE,
+      ),
+    ));
+
+    $this->executeView($view);
+
+    $this->assertEqual('John', $view->field['name']->advanced_render($view->result[0]));
+
+    // Make the url a link.
+    $view->delete();
+    $view = $this->getBasicView();
+
+    $view->display['default']->handler->override_option('fields', array(
+      'name' => array(
+        'id' => 'name',
+        'table' => 'views_test',
+        'field' => 'name',
+        'relationship' => 'none',
+      ),
+    ));
+
+    $this->executeView($view);
+
+    $this->assertEqual(l('John', 'John'), $view->field['name']->advanced_render($view->result[0]));
+  }
+}
